# MSEL_contour_extraction_matlab

./: README  README.md  demo_compute_MSEL.m
Eval/: Main_eval_loose_CFGD_new_prune.m  Main_eval_strict_CFGD_new_prune.m  SE_KGS_CFGD_eval_vary_num_PR.mat  SE_Kokkinos_CFGD_eval_vary_num_PR.mat  SE_Kokkinos_VOC2007_eval_vary_num_PR.mat  SE_Kovesi_CFGD_eval_vary_num_PR.mat  SE_Kovesi_VOC2007_eval_vary_num_PR.mat  SE_SEL_CFGD_eval_vary_num_PR.mat  SE_SEL_CFGD_loose_eval_PR_mat.mat  SE_SEL_VOC2007_eval_vary_num_PR.mat  SE_SEL_VOC2007_eval_vary_num_PR_len_rank.mat  SE_SEL_VOC2007_eval_vary_num_PR_prob_rank.mat  TO_Kokkinos_CFGD_eval_vary_num_PR.mat  TO_Kokkinos_VOC2007_eval_vary_num_PR.mat  TO_Kovesi_CFGD_eval_vary_num_PR.mat  TO_Kovesi_VOC2007_eval_vary_num_PR.mat  TO_SEL_CFGD_eval_vary_num_PR.mat  TO_SEL_CFGD_loose_eval_PR_mat.mat  TO_SEL_CFGD_strict_eval_PR_mat.mat  TO_SEL_VOC2007_eval_vary_num_PR.mat  gPb_KGS_CFGD_eval_vary_num_PR.mat  gPb_KGS_VOC2007_eval_vary_num_PR.mat  gPb_Kokkinos_CFGD_eval_vary_num_PR.mat  gPb_Kokkinos_VOC2007_eval_vary_num_PR.mat  gPb_Kovesi_CFGD_eval_vary_num_PR.mat  gPb_Kovesi_VOC2007_eval_vary_num_PR.mat  gPb_NO_TO_SEL_CFGD_eval_vary_num_PR.mat  gPb_NO_TO_SEL_VOC2007_eval_vary_num_PR.mat  gPb_SEL_CFGD_eval_vary_num_PR.mat  gPb_SEL_CFGD_loose_eval_PR_mat.mat  gPb_SEL_VOC2007_eval_vary_num_PR.mat  gPb_SEL_VOC2007_eval_vary_num_PR_len_rank.mat  gPb_SEL_VOC2007_eval_vary_num_PR_prob_rank.mat  gen_interp_SEL_CFGD_eval_vary_num_PR.mat  gen_no_interp_SEL_CFGD_eval_vary_num_PR.mat  main_eval_CFGD_varying_num.m  main_eval_CFGD_varying_num_others.m  main_eval_CFGD_varying_num_sort_len.m  main_eval_VOC2007_varying_num.m  main_eval_VOC2007_varying_num_others.m  (+7 more)
training/: .mat  SE_SEL_Features.mat  SE_SEL_RF_model.mat  SE_SEL_Y.mat  SE_SEL_beta_of_cues_for_merging.txt  SE_SEL_beta_of_cues_for_seletion.txt  SE_SEL_beta_of_geomcon_cue_for_merging.txt  SE_SEL_neg_features.mat  SE_SEL_pos_features.mat  TO_SEL_Features.mat  TO_SEL_Y.mat  TO_SEL_beta_of_cues_for_merging.txt  TO_SEL_beta_of_cues_for_seletion.txt  TO_SEL_beta_of_geomcon_cue_for_merging.txt  TO_SEL_neg_features.mat  TO_SEL_pos_features.mat  (+15 more)
util/MSEL_src/MSEL_core/: CMakeLists.txt  CMakeLists.txt~  dbdet_contour_breaker.cxx~  dbdet_contour_breaker.h~  dbdet_contour_breaker_geometric_process.cxx~  dbdet_contour_breaker_geometric_process.h~  dbdet_contour_ranker_process.cxx~  dbdet_contour_ranker_process.h~  dbdet_curve_fragment_cues.cxx~  dbdet_curve_fragment_cues.h~  dbdet_curve_fragment_ranker.h~  dbdet_edge_appearance_util.cxx~  dbdet_edge_appearance_util.h~  dbdet_gaussian_kernel.h~  dbdet_graphical_model_contour_merge.cxx~  dbdet_graphical_model_contour_merge.h~  dbdet_graphical_model_contour_merge_process.cxx~  dbdet_graphical_model_contour_merge_process.h~  dbdet_interp_kernel.h~  dbdet_third_order_color_detector.cxx~  dbdet_third_order_color_detector.h~  dbdet_third_order_color_edge_detector_process.cxx~  dbdet_third_order_color_edge_detector_process.h~  dbgl_diffgeom.cxx~  dbgl_diffgeom.h~  dbtest_root_dir.cxx~  dbtest_where_root_dir.h.in~  vidpro1_image_storage.h~  vidpro1_save_cem_process.cxx~
(+346 files in other folders)
